enables rakefile to test all files

--- a/rakefile
+++ b/rakefile
@@ -1,5 +1,9 @@
-task default: %w[test]
+# require "bundler/gem_tasks"
+require "rake/testtask"
 
-task :test do
-  ruby "my_test.rb"
+Rake::TestTask.new do |t|
+  t.test_files = FileList['tests/**/*_test.rb']
 end
+desc "Run tests"
+
+task default: :test
