--- a/rakefile
+++ b/rakefile
@@ -1,5 +1,8 @@
 # require "bundler/gem_tasks"
 require "rake/testtask"
+require 'codacy-coverage'
+
+Codacy::Reporter.start
 
 Rake::TestTask.new do |t|
   t.test_files = FileList['tests/**/*_test.rb']
